[gd_scene load_steps=6 format=3 uid="uid://beccdhjgbdppi"]

[ext_resource type="Script" uid="uid://bryter64bbkr2" path="res://Scripts/Interfaz/ajustes.gd" id="1_dtxbi"]
[ext_resource type="LabelSettings" uid="uid://d0dn535gdo6p0" path="res://Scenes/UI/UI_laber_settings/ajusText.tres" id="2_gxmuy"]
[ext_resource type="FontFile" uid="uid://c70w8hiljv1w" path="res://Scenes/UI/Fuentes_UI/PixelOperator8.ttf" id="2_m11hy"]
[ext_resource type="LabelSettings" uid="uid://dfgb640btujhh" path="res://Scenes/UI/UI_laber_settings/text8.tres" id="2_yqh2h"]

[sub_resource type="CanvasTexture" id="CanvasTexture_fu7mr"]
specular_color = Color(0.591423, 0.67124, 0.0730327, 1)

[node name="Ajustes" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_dtxbi")

[node name="HSplitContainer" type="HBoxContainer" parent="."]
offset_left = 178.0
offset_top = 108.0
offset_right = 711.0
offset_bottom = 350.0
scale = Vector2(3, 3)

[node name="Columna1" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="General" type="Label" parent="HSplitContainer/Columna1"]
layout_mode = 2
text = "ajus_vol_gen"
label_settings = ExtResource("2_gxmuy")
autowrap_mode = 2

[node name="ContGeneral" type="HBoxContainer" parent="HSplitContainer/Columna1"]
layout_mode = 2

[node name="HSliderGeneral" type="HSlider" parent="HSplitContainer/Columna1/ContGeneral"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelGeneral" type="Label" parent="HSplitContainer/Columna1/ContGeneral"]
layout_mode = 2
size_flags_horizontal = 8
label_settings = ExtResource("2_yqh2h")

[node name="Espacio1" type="Panel" parent="HSplitContainer/Columna1"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Musica" type="Label" parent="HSplitContainer/Columna1"]
layout_mode = 2
text = "ajus_vol_mus"
label_settings = ExtResource("2_gxmuy")
autowrap_mode = 2

[node name="ContMusica" type="HBoxContainer" parent="HSplitContainer/Columna1"]
layout_mode = 2

[node name="HSliderMusic" type="HSlider" parent="HSplitContainer/Columna1/ContMusica"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelMusica" type="Label" parent="HSplitContainer/Columna1/ContMusica"]
layout_mode = 2
label_settings = ExtResource("2_yqh2h")

[node name="Espacio2" type="Panel" parent="HSplitContainer/Columna1"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Enemigos" type="Label" parent="HSplitContainer/Columna1"]
layout_mode = 2
text = "ajus_vol_ene"
label_settings = ExtResource("2_gxmuy")
autowrap_mode = 2

[node name="ContEnemigos" type="HBoxContainer" parent="HSplitContainer/Columna1"]
layout_mode = 2

[node name="HSliderEnemigos" type="HSlider" parent="HSplitContainer/Columna1/ContEnemigos"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="NivelEnemigos" type="Label" parent="HSplitContainer/Columna1/ContEnemigos"]
layout_mode = 2
label_settings = ExtResource("2_yqh2h")

[node name="Columna2" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Espacio1" type="Panel" parent="HSplitContainer/Columna2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Teclas" type="Button" parent="HSplitContainer/Columna2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_m11hy")
text = "ajus_btn_tecl"

[node name="Espacio2" type="Panel" parent="HSplitContainer/Columna2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Idiomas" type="OptionButton" parent="HSplitContainer/Columna2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_m11hy")
item_count = 4
popup/item_0/text = "ajus_optbtn_es"
popup/item_0/id = 0
popup/item_1/text = "ajus_optbtn_en"
popup/item_1/id = 1
popup/item_2/text = "ajus_optbtn_pt"
popup/item_2/id = 2
popup/item_3/text = "ajus_optbtn_it"
popup/item_3/id = 3

[node name="Espacio3" type="Panel" parent="HSplitContainer/Columna2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Daltonismo" type="OptionButton" parent="HSplitContainer/Columna2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_m11hy")
item_count = 5
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Protanopia"
popup/item_1/id = 1
popup/item_2/text = "Deuteranopia"
popup/item_2/id = 2
popup/item_3/text = "Tritanopia"
popup/item_3/id = 3
popup/item_4/text = "Achromatopsia"
popup/item_4/id = 4

[node name="BotonVolver" type="Button" parent="."]
offset_left = 721.0
offset_top = 775.0
offset_right = 878.0
offset_bottom = 806.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_m11hy")
text = "gen_volver"

[node name="TextoSalir" type="Label" parent="BotonVolver"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.497
anchor_right = -0.497
offset_left = 80.029
offset_top = 56.6666
offset_right = 462.029
offset_bottom = 85.6666
text = "gen_salir"
label_settings = ExtResource("2_gxmuy")
horizontal_alignment = 2
vertical_alignment = 2
language = "es_ES"

[node name="Fondo" type="Sprite2D" parent="."]
modulate = Color(0.890196, 0.894118, 1, 1)
z_index = -1
position = Vector2(962.25, 542.75)
scale = Vector2(1925.5, 1086.5)
texture = SubResource("CanvasTexture_fu7mr")

[connection signal="value_changed" from="HSplitContainer/Columna1/ContGeneral/HSliderGeneral" to="." method="_on_h_slider_general_value_changed"]
[connection signal="value_changed" from="HSplitContainer/Columna1/ContMusica/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="HSplitContainer/Columna1/ContEnemigos/HSliderEnemigos" to="." method="_on_h_slider_enemies_value_changed"]
[connection signal="pressed" from="HSplitContainer/Columna2/Teclas" to="." method="_on_keys_pressed"]
[connection signal="pressed" from="HSplitContainer/Columna2/Teclas" to="." method="_on_teclas_pressed"]
[connection signal="item_selected" from="HSplitContainer/Columna2/Idiomas" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="HSplitContainer/Columna2/Daltonismo" to="." method="_on_daltonismo_item_selected"]
[connection signal="pressed" from="BotonVolver" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BotonVolver" to="." method="_on_boton_volver_pressed"]
